--- a/index.html
+++ b/index.html
@@ -320,6 +320,199 @@
             border-radius: 15px;
         }
     </style>
+
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Mohammad Sheikh Shahinur Rahman",
+  "alternateName": "Md Shahinur Rahman",
+  "jobTitle": "Poet, Writer, Journalist, Software Engineer, CTO, Cybersecurity Specialist",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "IT Amadersomaj Inc.",
+    "url": "https://it.amadersomaj.com"
+  },
+  "image": "https://www.bangla-kobita.com/images/up/1/pp29352-dYu.png",
+  "url": "https://shahinur.amadersomaj.com",
+  "gender": "Male",
+  "nationality": "Bangladeshi",
+  "birthDate": "December 9",
+  "birthPlace": {
+    "@type": "Place",
+    "name": "Kishoreganj, Bangladesh"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "House-77, Suhrawardy Avenue, Baridhara Diplomatic Zone",
+    "addressLocality": "Dhaka",
+    "postalCode": "1212",
+    "addressCountry": "BD"
+  },
+  "sameAs": [
+    "https://www.facebook.com/Shahinurrahman.0.Official",
+    "https://www.linkedin.com/in/mohammad-sheikh-shahinur-rahman/",
+    "https://x.com/Shahinalam3546",
+    "https://www.amazon.com/stores/Mohammad-Sheikh-Shahinur-Rahman/author/B0DHY6ZCKL",
+    "https://www.romance.io/authors/65c09bfba21e2f41c4050077/mohammad-sheikh-shahinur-rahman",
+    "https://www.fnac.com/ia11471926/Mohammad-Sheikh-Shahinur-Rahman",
+    "https://bdbooks.net/author-single/7455",
+    "https://scholar.google.com/citations?user=OW-KhOcAAAAJ&hl=en",
+    "https://www.goodreads.com/author/show/48249713.Mohammad_Sheikh_Shahinur_Rahman",
+    "https://www.rokomari.com/book/author/126602/mohammad-sheikh-shahinur-rahman"
+  ],
+  "alumniOf": [
+    {
+      "@type": "EducationalOrganization",
+      "name": "National University"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Duke University"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "University of Michigan"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Hong Kong University of Science and Technology"
+    },
+    {
+      "@type": "EducationalOrganization",
+      "name": "Meta (Full Stack Developer Program)"
+    }
+  ],
+  "knowsAbout": [
+    "Cybersecurity", "Digital Forensics", "Ethical Hacking", "Penetration Testing", "Software Engineering",
+    "Poetry", "Literature", "Journalism", "CTO leadership", "DevOps", "Reverse Engineering"
+  ],
+  "award": [
+    "Top 100 Ethical Hackers",
+    "30+ International Recognitions",
+    "20+ Published Books"
+  ],
+  "description": "Mohammad Sheikh Shahinur Rahman is a renowned Bangladeshi poet, writer, journalist, software engineer, and cybersecurity expert with global recognition for his literary works and technical contributions.",
+  "author": {
+    "@type": "CreativeWorkSeries",
+    "name": "Books by Mohammad Sheikh Shahinur Rahman",
+    "hasPart": [
+      {
+        "@type": "Book",
+        "name": "Bug Bounty Beginner To Master",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Flutter Beginner to Master",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Bridge the Gap",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Mastering Goals: The Path to Achievement and Success",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "HOW TO MAINTAIN A HAPPY SEXUAL LIFE",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "How to Long Time in Sex: A Comprehensive Guide",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Master Java: Beginner to Expert",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Where Truth Hides",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Client Hunting Mastery on LinkedIn",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "The Spirit",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "Death Or You",
+        "url": "https://www.amazon.com/dp/B0DHY6ZCKL"
+      },
+      {
+        "@type": "Book",
+        "name": "আমি কবি",
+        "url": "https://www.rokomari.com/book/author/126602/mohammad-sheikh-shahinur-rahman"
+      },
+      {
+        "@type": "Book",
+        "name": "আমার ধুঁসর স্মৃতিপটে তুমি'ই কবিতা",
+        "url": "https://www.rokomari.com/book/author/126602/mohammad-sheikh-shahinur-rahman"
+      },
+      {
+        "@type": "Book",
+        "name": "অনুভূতির অনুরণন",
+        "url": "https://www.rokomari.com/book/author/126602/mohammad-sheikh-shahinur-rahman"
+      },
+      {
+        "@type": "Book",
+        "name": "প্রকৃতি",
+        "url": "https://www.rokomari.com/book/author/126602/mohammad-sheikh-shahinur-rahman"
+      }
+    ]
+  },
+  "hasOccupation": [
+    {
+      "@type": "Occupation",
+      "name": "Software Engineer"
+    },
+    {
+      "@type": "Occupation",
+      "name": "Poet"
+    },
+    {
+      "@type": "Occupation",
+      "name": "Journalist"
+    },
+    {
+      "@type": "Occupation",
+      "name": "CTO"
+    },
+    {
+      "@type": "Occupation",
+      "name": "Cybersecurity Specialist"
+    }
+  ],
+  "quotation": [
+    "Success is not a destination; it is the journey of falling, rising, and moving forward despite the odds.",
+    "A writer does not merely create stories; they weave the fabric of time, emotion, and imagination into words that endure.",
+    "All the questions in the mind stop there, when only a beautiful scene fills the eyes—as if there is a renaissance amidst decay, life amidst confinement.",
+    "In the world of innovation, every challenge is an opportunity to code the future we dream of.",
+    "Faith is the bridge between despair and hope, guiding us through life's storms to the calm shores beyond.",
+    "Where reason stops, argument hides, there is the triumph of fascination.",
+    "Knowledge is infinite, like the ocean; the more you dive, the deeper it gets, revealing treasures untold.",
+    "Love is not just a feeling; it is the silent force that shapes our existence, one heartbeat at a time.",
+    "True creativity lies at the intersection of passion and purpose, where ideas transcend limits to become reality.",
+    "To be human is to feel deeply, to love selflessly, and to leave the world a little brighter than you found it.",
+    "Life is a fleeting breath, but within it lies the eternal echo of love, loss, and redemption.",
+    "Poetry is not just words; it is the soul whispering its deepest secrets to the universe."
+  ]
+}
+</script>
+
 </head>
 <body>
  <!-- Header Section -->
