--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>মোহাম্মদ শেখ শাহিনুর রহমান - প্রোফাইল</title>
+     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>মোহাম্মদ শেখ শাহিনুর রহমান - প্রোফাইল</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="মোহাম্মদ শেখ শাহিনুর রহমান একজন আন্তর্জাতিকভাবে স্বীকৃত কবি, লেখক, সফটওয়্যার ইঞ্জিনিয়ার এবং সাইবার নিরাপত্তা বিশেষজ্ঞ। তার সাহিত্যকর্ম এবং প্রযুক্তিগত অবদান বিশ্বব্যাপী প্রশংসিত।">
+  <meta name="keywords" content="Mohammad Sheikh Shahinur Rahman, মোহাম্মদ শেখ শাহিনুর রহমান, কবি, লেখক, সাংবাদিক, সফটওয়্যার ইঞ্জিনিয়ার, সাইবার সিকিউরিটি, CTO, Flutter, Bug Bounty, বাংলা কবিতা, নিরাপত্তা">
+  <meta name="author" content="Mohammad Sheikh Shahinur Rahman">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="bn">
+  <link rel="canonical" href="https://shahinur.amadersomaj.com/">
+
+  <!-- Open Graph for Facebook and social -->
+  <meta property="og:type" content="profile">
+  <meta property="og:title" content="মোহাম্মদ শেখ শাহিনুর রহমান - প্রোফাইল">
+  <meta property="og:description" content="আন্তর্জাতিকভাবে স্বীকৃত একজন কবি, লেখক ও প্রযুক্তিবিদ মোহাম্মদ শেখ শাহিনুর রহমান সম্পর্কে জানুন।">
+  <meta property="og:image" content="https://www.bangla-kobita.com/images/up/1/pp29352-dYu.png">
+  <meta property="og:url" content="https://shahinur.amadersomaj.com">
+  <meta property="og:site_name" content="Amadersomaj">
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="মোহাম্মদ শেখ শাহিনুর রহমান - প্রোফাইল">
+  <meta name="twitter:description" content="আন্তর্জাতিকভাবে স্বীকৃত একজন কবি, লেখক ও প্রযুক্তিবিদ মোহাম্মদ শেখ শাহিনুর রহমান সম্পর্কে জানুন।">
+  <meta name="twitter:image" content="https://www.bangla-kobita.com/images/up/1/pp29352-dYu.png">
+  <meta name="twitter:site" content="@Shahinalam3546">
+  <meta name="twitter:creator" content="@Shahinalam3546">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
