--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
   </section>
 </main>
 
-    <!-- Education Section -->
+   <!-- Education Section -->
 <section class="bio-section">
   <h2>🎓 শিক্ষাগত যোগ্যতা</h2>
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -634,7 +634,7 @@
           <i class="fas fa-calendar-alt"></i> ২০২০-বর্তমান
         </p>
         <p class="text-muted">
-          <i class="fas fa-map-marker-alt"></i> ঢাকা, বাংলাদেশ
+          <i class="fas fa-map-marker-alt"></i> গাজীপুর, বাংলাদেশ
         </p>
         <p class="text-info">
           <i class="fas fa-book"></i> ব্যাচেলর ডিগ্রী (অন্তর্ভুক্ত)
@@ -721,9 +721,56 @@
         </p>
       </div>
     </div>
+
+    <!-- Diploma Nursing: Anatomy and Physiology Card -->
+    <div class="col">
+      <div class="card education-card text-center p-4 shadow-sm">
+        <h4 class="fw-bold">
+          <i class="fas fa-heartbeat me-2"></i>ডিপ্লোমা নার্সিং: এনাটমি এন্ড ফিজিওলজি
+        </h4>
+        <p><strong>বাংলাদেশ নার্সিং এন্ড মিডওয়াইফারি কাউন্সিল</strong></p>
+        <p class="text-success">
+          <i class="fas fa-check-circle"></i> সম্পূর্ণ
+        </p>
+        <p class="text-muted">
+          <i class="fas fa-map-marker-alt"></i> বাংলাদেশ
+        </p>
+      </div>
+    </div>
+
+    <!-- B.Sc Nursing: Newborn Nursing Card -->
+    <div class="col">
+      <div class="card education-card text-center p-4 shadow-sm">
+        <h4 class="fw-bold">
+          <i class="fas fa-baby me-2"></i>বিএসসি : নিউবোর্ন নার্সিং
+        </h4>
+        <p><strong>বাংলাদেশ নার্সিং এন্ড মিডওয়াইফারি কাউন্সিল</strong></p>
+        <p class="text-success">
+          <i class="fas fa-check-circle"></i> সম্পূর্ণ
+        </p>
+        <p class="text-muted">
+          <i class="fas fa-map-marker-alt"></i> বাংলাদেশ
+        </p>
+      </div>
+    </div>
+
+    <!-- Diploma Nursing: Leadership and Management Card -->
+    <div class="col">
+      <div class="card education-card text-center p-4 shadow-sm">
+        <h4 class="fw-bold">
+          <i class="fas fa-users-cog me-2"></i>ডিপ্লোমা নার্সিং: নেতৃত্ব এবং ব্যবস্থাপনা
+        </h4>
+        <p><strong>বাংলাদেশ নার্সিং এন্ড মিডওয়াইফারি কাউন্সিল</strong></p>
+        <p class="text-success">
+          <i class="fas fa-check-circle"></i> সম্পূর্ণ
+        </p>
+        <p class="text-muted">
+          <i class="fas fa-map-marker-alt"></i> বাংলাদেশ
+        </p>
+      </div>
+    </div>
   </div>
 </section>
-
         <!-- Certificates Section -->
 <section class="bio-section">
   <h2>📜 সার্টিফিকেট সমূহ</h2>
